[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyteslaconnectpk"
version = "1.0.0"
description = "Python API client for Tesla Connect Pakistan geyser and inverter devices"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "uppaljs", email = "uppaljs@users.noreply.github.com"},
]
keywords = ["tesla", "pakistan", "geyser", "inverter", "iot", "home-assistant"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://github.com/uppaljs/pyteslaconnectpk"
Documentation = "https://github.com/uppaljs/pyteslaconnectpk"
Repository = "https://github.com/uppaljs/pyteslaconnectpk"
Issues = "https://github.com/uppaljs/pyteslaconnectpk/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
